# just-jobs

./: .dockerignore  .gitignore  .pdm-python  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  codeql-analysis.yml  gh-pages.yaml
docs/: CNAME  config.mako  credits.mako  example.py  head.mako  index.html  just_jobs.html  logo.mako
docs/just_jobs/: errors.html  index.html  manager.html
docs/just_jobs/brokers/: base.html  index.html  redis.html
just_jobs/: __init__.py  broker.py  errors.py  job_type.py  jobs.py  manager.py  settings.py  typing.py  utils.py
just_jobs/brokers/: __init__.py  base.py  redis.py
tests/: conftest.py  example.py  test_broker.py  test_job.py  test_manager.py  test_redis_broker.py  test_settings.py  test_utils.py
