[project]
name = "just-jobs"
description = "A friendly and lightweight wrapper for arq."
version = "2.1.0"
authors = [
    {name = "Elias Gabriel", email = "me@eliasfgabriel.com"},
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
keywords = ["jobs", "arq", "tasks", "celery", "redis"]

requires-python = ">=3.7,<4.0"
dependencies = [
    "arq>=0.25.0",
    "colorama>=0.4.6",
    "dill>=0.3.6",
]

[project.urls]
homepage = "https://justjobs.thearchitector.dev"
documentation = "https://justjobs.thearchitector.dev"
changelog = "https://github.com/thearchitector/just-jobs/blob/main/CHANGELOG.md"
repository = "https://github.com/thearchitector/just-jobs"

[tool.pdm.scripts]
docs = "pdoc -o docs --no-search just_jobs"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pdoc>=13.1.1",
]

[tool.pytest.ini_options]
addopts = "-svv"
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.7"
strict = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
